# CheeSpeech---Argentine-Evaluation-Corpus

./: .gitignore  README.md  config.yaml  main.py  pyproject.toml
ASR/: whisper.py
analytics/: stats.py  wer.py
chee_speech/analytics/: wer.py
chee_speech/metrics/: composite_metric.py
chee_speech/utils/: valid_xml_tags.yaml  xml.py
data/metadata/: metadata_0000.csv  metadata_0001.csv  metadata_0002.csv  metadata_0003.csv  metadata_0004.csv  metadata_0005.csv  metadata_0006.csv  metadata_0007.csv  metadata_0008.csv  metadata_0009.csv  metadata_0010.csv  metadata_0011.csv  metadata_0012.csv  metadata_0013.csv  metadata_0014.csv  metadata_0015.csv  metadata_0016.csv  metadata_0017.csv  metadata_0018.csv  metadata_0019.csv  metadata_0020.csv  metadata_0021.csv  metadata_0022.csv  metadata_0023.csv  metadata_0024.csv  metadata_0025.csv  metadata_0026.csv  metadata_0027.csv  metadata_0028.csv  metadata_0029.csv
data/transcripts/: transcript_0000.txt  transcript_0001.txt  transcript_0002.txt  transcript_0003.txt  transcript_0004.txt  transcript_0005.txt  transcript_0006.txt  transcript_0007.txt  transcript_0008.txt  transcript_0009.txt  transcript_0010.txt  transcript_0011.txt  transcript_0012.txt  transcript_0013.txt  transcript_0014.txt  transcript_0015.txt  transcript_0016.txt  transcript_0017.txt  transcript_0018.txt  transcript_0019.txt  transcript_0020.txt  transcript_0021.txt  transcript_0022.txt  transcript_0023.txt  transcript_0024.txt  transcript_0025.txt  transcript_0026.txt  transcript_0027.txt  (+2 more)
results/: summary_wer_whisper_base.csv
utils/: xml.py
(+30 files in other folders)
